--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         event-set__click="_event: click; material.color: red;"
         
         ></a-entity>
+        
+        <a-entity sphere-collider=""></a-entity>
 
         <a-entity id="cameraRig" position="0 0 0">
           <a-camera position="0 1.6 5" orbit="" id="camera" joystick="" xr-mode-ui="enter-ar: #ar-button;"></a-camera>
