--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
         <link rel="stylesheet" href="styles.css" />
         <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
       <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.min.js"></script>
+      <script src="https://morandd.github.io/aframe-multitouch-look-controls/multitouch-look-controls.js"></script>
 
     </head>
 <body >
-    <a-scene>
+    <a-scene background="color:#ffffff">
         <a-asset>
           <a-asset-item id="car" src="models/pony_cartoon.glb"></a-asset-item>
         </a-asset>
-        <a-entity movement-controls="spped:0.15" position = "0 0 6">
+        <a-entity  camera multitouch-look-controls movement-controls="spped:0.15" position = "0 0 6">
           <a-entity camera position="0 1 -4"
                     look-controls="pointerLockEnabled : true"
                     >
@@ -27,3 +28,4 @@
     </a-scene>
 </body>
 </html>
+
