--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
           <a-asset-item id="car" src="models/pony_cartoon.glb"></a-asset-item>
         </a-asset>
         <a-entity movement-controls="spped:0.15" position = "0 0 6">
-          <a-entity camera multitouch-look-controls position="0 1 -4"
+          <a-entity camera position="0 1 -4"
                     look-controls="pointerLockEnabled : true"
+                      multitouch-look-controls
                     >
             <a-cursor></a-cursor>
           
