--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
       <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.min.js"></script>
-      <script src="joystick.min.js"></script>
+      <script src="joyscrick.min.js"></script>
       <script src="joystick.js"></script>
       
 
