--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         let moveX = 0, moveY = 0, rotY = 0;
 
-        // Joystick esquerdo – movimento
+        // Joystick esquerdo – movimento no plano
         nipplejs.create({
           zone: document.getElementById('joystick-left'),
           mode: 'static',
@@ -50,40 +50,31 @@
           moveY = 0;
         });
 
-        // Joystick direito – rotação
+        // Joystick direito – rotação horizontal com eixo X
         nipplejs.create({
           zone: document.getElementById('joystick-right'),
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'red'
         }).on('move', (evt, data) => {
-          const angle = data.angle.degree;
-          const distance = data.distance;
-
-          if (angle > 45 && angle < 135) {
-            rotY = distance * 0.2;
-          } else if (angle > 225 && angle < 315) {
-            rotY = -distance * 0.2;
-          } else {
-            rotY = 0;
-          }
+          rotY = data.vector.x * 5; // controle lateral
         }).on('end', () => {
           rotY = 0;
         });
 
-        // Componente A-Frame para aplicar os controles
+        // Componente A-Frame que aplica os controles
         AFRAME.registerComponent('dual-joystick', {
           tick: function () {
             const pos = cameraRig.getAttribute('position');
             const rot = cameraRig.getAttribute('rotation');
             const angleRad = THREE.MathUtils.degToRad(rot.y);
 
-            // Movimento baseado na rotação atual
-            pos.x += Math.sin(angleRad) * moveX + Math.cos(angleRad) * moveY;
-            pos.z += Math.cos(angleRad) * moveX - Math.sin(angleRad) * moveY;
+            // Movimento baseado na rotação
+            pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
+            pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
             cameraRig.setAttribute('position', pos);
 
-            // Rotação horizontal do cameraRig
+            // Rotação horizontal (giro em Y)
             rot.y += rotY * 0.05;
             cameraRig.setAttribute('rotation', rot);
           }
