--- a/index.html
+++ b/index.html
@@ -2,33 +2,40 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Controle VR e Touchscreen</title>
+    <title>VR + Mobile Touch A-Frame</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.9.0/nipplejs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden; touch-action: none;">
-    <!-- Joystick containers (aparecem no modo touchscreen) -->
+    <!-- Joysticks: visíveis apenas em touchscreen -->
     <div id="joystick-left"
-         style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
+         style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
 
     <div id="joystick-right"
-         style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
+         style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
 
-    <!-- A-Frame scene com VR ativado -->
-    <a-scene vr-mode-ui="enabled: true">
-      <!-- Camera rig com controles de VR nativos -->
+    <a-scene vr-mode-ui="enabled: true" renderer="antialias: true">
+      <!-- Camera rig -->
       <a-entity id="cameraRig" position="0 1.6 0">
-        <a-camera wasd-controls="enabled: false" look-controls="pointerLockEnabled: false"></a-camera>
+        <a-camera wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
       </a-entity>
 
-      <a-box position="0 0.5 -5" color="red"></a-box>
+      <!-- Controllers para VR (Meta Quest) -->
+      <a-entity laser-controls="hand: left"></a-entity>
+      <a-entity laser-controls="hand: right"></a-entity>
+
+      <!-- Mãos realistas (opcional) -->
+      <a-entity hand-tracking-controls="hand: left" visible="true"></a-entity>
+      <a-entity hand-tracking-controls="hand: right" visible="true"></a-entity>
+
+      <!-- Objetos de teste -->
+      <a-box position="0 0.5 -3" color="tomato"></a-box>
       <a-plane rotation="-90 0 0" width="30" height="30" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 
-    <!-- Script de controle de entrada de VR e joysticks -->
     <script>
       window.addEventListener('DOMContentLoaded', () => {
         const cameraRig = document.getElementById('cameraRig');
@@ -37,36 +44,28 @@
 
         let moveX = 0, moveY = 0, rotY = 0;
 
-        // Função para verificar a plataforma e ativar os controles
-        const checkPlatform = () => {
-          const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-          const isVR = AFRAME.scenes[0].is('vr-mode'); // Verifica se está no modo VR
+        function isTouchDevice() {
+          return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+        }
 
+        function checkMode() {
+          const isVR = AFRAME.scenes[0].is('vr-mode');
           if (isVR) {
-            // Esconde os joysticks no VR
             joystickLeft.style.display = 'none';
             joystickRight.style.display = 'none';
-          } else if (isMobile) {
-            // Mostra os joysticks apenas em dispositivos móveis
+          } else if (isTouchDevice()) {
             joystickLeft.style.display = 'block';
             joystickRight.style.display = 'block';
           } else {
-            // Esconde os joysticks em dispositivos não móveis
             joystickLeft.style.display = 'none';
             joystickRight.style.display = 'none';
           }
-        };
+        }
 
-        // Detectar mudança no modo VR e checar a plataforma
-        AFRAME.scenes[0].addEventListener('enter-vr', () => {
-          checkPlatform(); // Verifica e ajusta os controles
-        });
+        AFRAME.scenes[0].addEventListener('enter-vr', checkMode);
+        AFRAME.scenes[0].addEventListener('exit-vr', checkMode);
 
-        AFRAME.scenes[0].addEventListener('exit-vr', () => {
-          checkPlatform(); // Verifica e ajusta os controles
-        });
-
-        // Joystick esquerdo – movimento no plano
+        // Joystick esquerdo – movimento
         nipplejs.create({
           zone: joystickLeft,
           mode: 'static',
@@ -82,38 +81,37 @@
           moveY = 0;
         });
 
-        // Joystick direito – rotação horizontal com eixo X
+        // Joystick direito – rotação
         nipplejs.create({
           zone: joystickRight,
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'red'
         }).on('move', (evt, data) => {
-          rotY = data.vector.x * 5; // controle lateral
+          rotY = data.vector.x * 5;
         }).on('end', () => {
           rotY = 0;
         });
 
-        // Componente A-Frame que aplica os controles
         AFRAME.registerComponent('dual-joystick', {
           tick: function () {
             const pos = cameraRig.getAttribute('position');
             const rot = cameraRig.getAttribute('rotation');
             const angleRad = THREE.MathUtils.degToRad(rot.y);
 
-            // Movimento baseado na rotação
+            // Movimento
             pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
             pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
             cameraRig.setAttribute('position', pos);
 
-            // Rotação horizontal (giro em Y)
+            // Rotação
             rot.y += rotY * 0.05;
             cameraRig.setAttribute('rotation', rot);
           }
         });
 
         cameraRig.setAttribute('dual-joystick', '');
-        checkPlatform(); // Checa a plataforma ao iniciar
+        checkMode();
       });
     </script>
   </body>
