--- a/index.html
+++ b/index.html
@@ -2,29 +2,44 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>VR Navigation + Touchscreen Joysticks</title>
+    <title>VR Interação com Objetos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/super-hands@4.0.5/dist/super-hands.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden; touch-action: none;">
-    <!-- Joysticks apenas para touchscreen -->
     <div id="joystick-left" style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
     <div id="joystick-right" style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
 
     <a-scene vr-mode-ui="enabled: true" renderer="antialias: true">
-      <!-- Camera Rig -->
-      <a-entity id="cameraRig" position="0 1.6 0">
+      <!-- RIG -->
+      <a-entity id="cameraRig" position="0 1.6 0" movement-handler>
         <a-camera id="playerCam" wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
 
-        <!-- Controles do Quest (sem mãos) -->
-        <a-entity id="leftHand" oculus-touch-controls="hand: left"></a-entity>
-        <a-entity id="rightHand" oculus-touch-controls="hand: right"></a-entity>
+        <!-- Mãos com laser pointer e super-hands -->
+        <a-entity id="leftHand"
+                  laser-controls="hand: left"
+                  raycaster="objects: .interactable"
+                  super-hands></a-entity>
+
+        <a-entity id="rightHand"
+                  laser-controls="hand: right"
+                  raycaster="objects: .interactable"
+                  super-hands></a-entity>
       </a-entity>
 
-      <!-- Cena -->
-      <a-box position="0 0.5 -3" color="tomato"></a-box>
+      <!-- Objetos interativos -->
+      <a-box class="interactable" position="0 1 -3" color="tomato" 
+             dynamic-body
+             hoverable grabbable stretchable draggable drag-rotate></a-box>
+
+      <a-sphere class="interactable" position="2 1 -3" radius="0.5" color="skyblue"
+                hoverable grabbable stretchable draggable drag-rotate></a-sphere>
+
       <a-plane rotation="-90 0 0" width="30" height="30" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
@@ -34,7 +49,6 @@
         const cameraRig = document.getElementById('cameraRig');
         const joystickLeft = document.getElementById('joystick-left');
         const joystickRight = document.getElementById('joystick-right');
-        const playerCam = document.getElementById('playerCam');
 
         let moveX = 0, moveY = 0, rotY = 0;
         let isVR = false;
@@ -45,22 +59,14 @@
 
         function checkMode() {
           isVR = AFRAME.scenes[0].is('vr-mode');
-          if (isVR) {
-            joystickLeft.style.display = 'none';
-            joystickRight.style.display = 'none';
-          } else if (isTouchDevice()) {
-            joystickLeft.style.display = 'block';
-            joystickRight.style.display = 'block';
-          } else {
-            joystickLeft.style.display = 'none';
-            joystickRight.style.display = 'none';
-          }
+          joystickLeft.style.display = isVR ? 'none' : isTouchDevice() ? 'block' : 'none';
+          joystickRight.style.display = isVR ? 'none' : isTouchDevice() ? 'block' : 'none';
         }
 
         AFRAME.scenes[0].addEventListener('enter-vr', checkMode);
         AFRAME.scenes[0].addEventListener('exit-vr', checkMode);
 
-        // Joystick Touchscreen (Mobile)
+        // Joysticks mobile
         nipplejs.create({
           zone: joystickLeft,
           mode: 'static',
@@ -87,13 +93,12 @@
           rotY = 0;
         });
 
-        // Componente de movimento com VR ou touch
+        // Movimento VR e Touch
         AFRAME.registerComponent('movement-handler', {
           init: function () {
             const leftHand = document.getElementById('leftHand');
             const rightHand = document.getElementById('rightHand');
 
-            // Movimento com o thumbstick esquerdo
             leftHand.addEventListener('thumbstickmoved', (evt) => {
               moveX = evt.detail.x * 0.05;
               moveY = -evt.detail.y * 0.05;
@@ -103,7 +108,6 @@
               moveY = 0;
             });
 
-            // Rotação com o thumbstick direito
             rightHand.addEventListener('thumbstickmoved', (evt) => {
               rotY = evt.detail.x * 3;
             });
@@ -117,18 +121,15 @@
             const rot = cameraRig.getAttribute('rotation');
             const angleRad = THREE.MathUtils.degToRad(rot.y);
 
-            // Mover
             pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
             pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
             cameraRig.setAttribute('position', pos);
 
-            // Girar
             rot.y += rotY * 0.05;
             cameraRig.setAttribute('rotation', rot);
           }
         });
 
-        cameraRig.setAttribute('movement-handler', '');
         checkMode();
       });
     </script>
