--- a/index.html
+++ b/index.html
@@ -2,43 +2,43 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>VR Interação com Objetos</title>
+    <title>VR com Interação</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     
+    <!-- A-Frame e bibliotecas -->
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/super-hands@4.0.5/dist/super-hands.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden; touch-action: none;">
-    <div id="joystick-left" style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
-    <div id="joystick-right" style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
+    <!-- Joysticks para mobile -->
+    <div id="joystick-left" style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; display: none;"></div>
+    <div id="joystick-right" style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; display: none;"></div>
 
-    <a-scene vr-mode-ui="enabled: true" renderer="antialias: true">
+    <a-scene vr-mode-ui="enabled: true">
       <!-- RIG -->
-      <a-entity id="cameraRig" position="0 1.6 0" movement-handler>
-        <a-camera id="playerCam" wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
+      <a-entity id="cameraRig" movement-handler position="0 1.6 0">
+        <a-camera wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
 
-        <!-- Mãos com laser pointer e super-hands -->
+        <!-- Controladores com laser -->
         <a-entity id="leftHand"
-                  laser-controls="hand: left"
+                  laser-controls="hand: left; model: true"
                   raycaster="objects: .interactable"
                   super-hands></a-entity>
 
         <a-entity id="rightHand"
-                  laser-controls="hand: right"
+                  laser-controls="hand: right; model: true"
                   raycaster="objects: .interactable"
                   super-hands></a-entity>
       </a-entity>
 
       <!-- Objetos interativos -->
-      <a-box class="interactable" position="0 1 -3" color="tomato" 
-             dynamic-body
-             hoverable grabbable stretchable draggable drag-rotate></a-box>
+      <a-box class="interactable" position="0 1 -3" color="tomato"
+             grabbable stretchable draggable drag-rotate></a-box>
 
       <a-sphere class="interactable" position="2 1 -3" radius="0.5" color="skyblue"
-                hoverable grabbable stretchable draggable drag-rotate></a-sphere>
+                grabbable stretchable draggable drag-rotate></a-sphere>
 
       <a-plane rotation="-90 0 0" width="30" height="30" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
@@ -46,27 +46,25 @@
 
     <script>
       window.addEventListener('DOMContentLoaded', () => {
-        const cameraRig = document.getElementById('cameraRig');
+        const rig = document.getElementById('cameraRig');
         const joystickLeft = document.getElementById('joystick-left');
         const joystickRight = document.getElementById('joystick-right');
-
         let moveX = 0, moveY = 0, rotY = 0;
-        let isVR = false;
 
         function isTouchDevice() {
           return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
         }
 
         function checkMode() {
-          isVR = AFRAME.scenes[0].is('vr-mode');
-          joystickLeft.style.display = isVR ? 'none' : isTouchDevice() ? 'block' : 'none';
-          joystickRight.style.display = isVR ? 'none' : isTouchDevice() ? 'block' : 'none';
+          const isVR = AFRAME.scenes[0].is('vr-mode');
+          joystickLeft.style.display = (!isVR && isTouchDevice()) ? 'block' : 'none';
+          joystickRight.style.display = (!isVR && isTouchDevice()) ? 'block' : 'none';
         }
 
         AFRAME.scenes[0].addEventListener('enter-vr', checkMode);
         AFRAME.scenes[0].addEventListener('exit-vr', checkMode);
 
-        // Joysticks mobile
+        // Joystick esquerdo = movimento
         nipplejs.create({
           zone: joystickLeft,
           mode: 'static',
@@ -82,6 +80,7 @@
           moveY = 0;
         });
 
+        // Joystick direito = rotação Y
         nipplejs.create({
           zone: joystickRight,
           mode: 'static',
@@ -93,40 +92,39 @@
           rotY = 0;
         });
 
-        // Movimento VR e Touch
+        // Movimento em VR
         AFRAME.registerComponent('movement-handler', {
           init: function () {
-            const leftHand = document.getElementById('leftHand');
-            const rightHand = document.getElementById('rightHand');
+            const left = document.getElementById('leftHand');
+            const right = document.getElementById('rightHand');
 
-            leftHand.addEventListener('thumbstickmoved', (evt) => {
+            left.addEventListener('thumbstickmoved', (evt) => {
               moveX = evt.detail.x * 0.05;
               moveY = -evt.detail.y * 0.05;
             });
-            leftHand.addEventListener('thumbsticktouchend', () => {
+            left.addEventListener('thumbsticktouchend', () => {
               moveX = 0;
               moveY = 0;
             });
 
-            rightHand.addEventListener('thumbstickmoved', (evt) => {
+            right.addEventListener('thumbstickmoved', (evt) => {
               rotY = evt.detail.x * 3;
             });
-            rightHand.addEventListener('thumbsticktouchend', () => {
+            right.addEventListener('thumbsticktouchend', () => {
               rotY = 0;
             });
           },
-
           tick: function () {
-            const pos = cameraRig.getAttribute('position');
-            const rot = cameraRig.getAttribute('rotation');
-            const angleRad = THREE.MathUtils.degToRad(rot.y);
+            const pos = rig.getAttribute('position');
+            const rot = rig.getAttribute('rotation');
+            const angle = THREE.MathUtils.degToRad(rot.y);
 
-            pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
-            pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
-            cameraRig.setAttribute('position', pos);
+            pos.x += Math.sin(angle) * moveY + Math.cos(angle) * moveX;
+            pos.z += Math.cos(angle) * moveY - Math.sin(angle) * moveX;
+            rig.setAttribute('position', pos);
 
             rot.y += rotY * 0.05;
-            cameraRig.setAttribute('rotation', rot);
+            rig.setAttribute('rotation', rot);
           }
         });
 
